--- a/Sales Insights/Readme
+++ b/Sales Insights/Readme
@@ -1,5 +1,5 @@
 For this project I connected MySQL Server with Tableau and there understand and manipulated data according to the need.
-Further process includes building relationship schema, Cleaning and filtering data, introducing new calculated fields, etc.
+Further process includes building relationship schema, ETL, introducing new calculated fields and KPIs, etc.
 
 ## AIMS GRID
 
